// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Actions virtualized table 1`] = `
<DocumentFragment>
  <table
    aria-label="Aria labeled"
    class="pf-c-table pf-m-grid-md"
    data-ouia-component-id="OUIA-Generated-Table-10"
    data-ouia-component-type="PF4/Table"
    data-ouia-safe="true"
    role="grid"
  >
    <thead
      class=""
    >
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-5"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <th
          aria-sort="none"
          class="pf-c-table__sort"
          data-key="0"
          data-label="Header cell"
          scope="col"
        >
          <button
            class="pf-c-table__button"
            type="button"
          >
            <div
              class="pf-c-table__button-content"
            >
              <span
                class="pf-c-table__text"
              >
                Header cell
              </span>
              <span
                class="pf-c-table__sort-indicator"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 256 512"
                  width="1em"
                >
                  <path
                    d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                  />
                </svg>
              </span>
            </div>
          </button>
        </th>
        <th
          class=""
          data-key="1"
          data-label="Branches"
          scope="col"
        >
          Branches
        </th>
        <th
          class=""
          data-key="2"
          data-label="Pull requests"
          scope="col"
        >
          Pull requests
        </th>
        <th
          class=""
          data-key="3"
          data-label="Workspaces"
          scope="col"
        >
          Workspaces
        </th>
        <th
          class=""
          data-key="4"
          data-label="Last Commit"
          scope="col"
        >
          Last Commit
        </th>
        <td
          class=""
          data-key="5"
          data-label=""
        />
      </tr>
    </thead>
  </table>
</DocumentFragment>
`;

exports[`Selectable virtualized table 1`] = `
<DocumentFragment>
  <table
    aria-label="Aria labeled"
    class="pf-c-table pf-m-grid-md"
    data-ouia-component-id="OUIA-Generated-Table-12"
    data-ouia-component-type="PF4/Table"
    data-ouia-safe="true"
    role="grid"
  >
    <thead
      class=""
    >
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-6"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class="pf-c-table__check"
          data-key="0"
          data-label=""
        >
          <label>
            <input
              aria-label="Select all rows"
              name="check-all"
              type="checkbox"
            />
          </label>
        </td>
        <th
          aria-sort="none"
          class="pf-c-table__sort"
          data-key="1"
          data-label="Header cell"
          scope="col"
        >
          <button
            class="pf-c-table__button"
            type="button"
          >
            <div
              class="pf-c-table__button-content"
            >
              <span
                class="pf-c-table__text"
              >
                Header cell
              </span>
              <span
                class="pf-c-table__sort-indicator"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 256 512"
                  width="1em"
                >
                  <path
                    d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                  />
                </svg>
              </span>
            </div>
          </button>
        </th>
        <th
          class=""
          data-key="2"
          data-label="Branches"
          scope="col"
        >
          Branches
        </th>
        <th
          class=""
          data-key="3"
          data-label="Pull requests"
          scope="col"
        >
          Pull requests
        </th>
        <th
          class=""
          data-key="4"
          data-label="Workspaces"
          scope="col"
        >
          Workspaces
        </th>
        <th
          class=""
          data-key="5"
          data-label="Last Commit"
          scope="col"
        >
          Last Commit
        </th>
      </tr>
    </thead>
  </table>
</DocumentFragment>
`;

exports[`Simple Actions table 1`] = `
<DocumentFragment>
  <table
    aria-label="Aria labeled"
    class="pf-c-table pf-m-grid-md"
    data-ouia-component-id="OUIA-Generated-Table-8"
    data-ouia-component-type="PF4/Table"
    data-ouia-safe="true"
    role="grid"
  >
    <thead
      class=""
    >
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-4"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <th
          aria-sort="none"
          class="pf-c-table__sort"
          data-key="0"
          data-label="Header cell"
          scope="col"
        >
          <button
            class="pf-c-table__button"
            type="button"
          >
            <div
              class="pf-c-table__button-content"
            >
              <span
                class="pf-c-table__text"
              >
                Header cell
              </span>
              <span
                class="pf-c-table__sort-indicator"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 256 512"
                  width="1em"
                >
                  <path
                    d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                  />
                </svg>
              </span>
            </div>
          </button>
        </th>
        <th
          class=""
          data-key="1"
          data-label="Branches"
          scope="col"
        >
          Branches
        </th>
        <th
          class=""
          data-key="2"
          data-label="Pull requests"
          scope="col"
        >
          Pull requests
        </th>
        <th
          class=""
          data-key="3"
          data-label="Workspaces"
          scope="col"
        >
          Workspaces
        </th>
        <th
          class=""
          data-key="4"
          data-label="Last Commit"
          scope="col"
        >
          Last Commit
        </th>
        <td
          class=""
          data-key="5"
          data-label=""
        />
      </tr>
    </thead>
  </table>
</DocumentFragment>
`;

exports[`Simple virtualized table aria-label 1`] = `
<DocumentFragment>
  <table
    aria-label="Virtual Table Test"
    class="pf-c-table pf-m-grid-md"
    data-ouia-component-id="OUIA-Generated-Table-4"
    data-ouia-component-type="PF4/Table"
    data-ouia-safe="true"
    role="grid"
  >
    <thead
      class=""
    >
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-2"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <th
          class=""
          data-key="0"
          data-label="Header cell"
          scope="col"
        >
          Header cell
        </th>
        <th
          class=""
          data-key="1"
          data-label="Branches"
          scope="col"
        >
          Branches
        </th>
        <th
          class=""
          data-key="2"
          data-label="Pull requests"
          scope="col"
        >
          Pull requests
        </th>
        <th
          class=""
          data-key="3"
          data-label="Workspaces"
          scope="col"
        >
          Workspaces
        </th>
        <th
          class=""
          data-key="4"
          data-label="Last Commit"
          scope="col"
        >
          Last Commit
        </th>
      </tr>
    </thead>
  </table>
</DocumentFragment>
`;

exports[`Simple virtualized table className 1`] = `
<DocumentFragment>
  <table
    aria-label="Virtual Table Test"
    class="pf-c-table pf-m-grid-md"
    data-ouia-component-id="OUIA-Generated-Table-2"
    data-ouia-component-type="PF4/Table"
    data-ouia-safe="true"
    role="grid"
  >
    <thead
      class=""
    >
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-1"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <th
          class=""
          data-key="0"
          data-label="Header cell"
          scope="col"
        >
          Header cell
        </th>
        <th
          class=""
          data-key="1"
          data-label="Branches"
          scope="col"
        >
          Branches
        </th>
        <th
          class=""
          data-key="2"
          data-label="Pull requests"
          scope="col"
        >
          Pull requests
        </th>
        <th
          class=""
          data-key="3"
          data-label="Workspaces"
          scope="col"
        >
          Workspaces
        </th>
        <th
          class=""
          data-key="4"
          data-label="Last Commit"
          scope="col"
        >
          Last Commit
        </th>
      </tr>
    </thead>
  </table>
</DocumentFragment>
`;

exports[`Sortable Virtualized Table 1`] = `
<DocumentFragment>
  <table
    aria-label="Aria labeled"
    class="pf-c-table pf-m-grid-md"
    data-ouia-component-id="OUIA-Generated-Table-6"
    data-ouia-component-type="PF4/Table"
    data-ouia-safe="true"
    role="grid"
  >
    <thead
      class=""
    >
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-3"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <th
          aria-sort="none"
          class="pf-c-table__sort"
          data-key="0"
          data-label="Header cell"
          scope="col"
        >
          <button
            class="pf-c-table__button"
            type="button"
          >
            <div
              class="pf-c-table__button-content"
            >
              <span
                class="pf-c-table__text"
              >
                Header cell
              </span>
              <span
                class="pf-c-table__sort-indicator"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 256 512"
                  width="1em"
                >
                  <path
                    d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                  />
                </svg>
              </span>
            </div>
          </button>
        </th>
        <th
          class=""
          data-key="1"
          data-label="Branches"
          scope="col"
        >
          Branches
        </th>
        <th
          class=""
          data-key="2"
          data-label="Pull requests"
          scope="col"
        >
          Pull requests
        </th>
        <th
          class=""
          data-key="3"
          data-label="Workspaces"
          scope="col"
        >
          Workspaces
        </th>
        <th
          class=""
          data-key="4"
          data-label="Last Commit"
          scope="col"
        >
          Last Commit
        </th>
      </tr>
    </thead>
  </table>
</DocumentFragment>
`;
